--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-/********************************* FONTS *********************************/
-@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600&display=swap');
 
 /********************************* COLORS *********************************/
 
@@ -7,19 +6,27 @@ body {
     background-color: #333533;
     color: #d6d6d6;
 }
-/********************************* GENERAL *********************************/
+/********************************* HEADING *********************************/
+
+.navbar{
+    font-family: 'Roboto', sans-serif;
+}
+
 .navbar-brand{
-    font-size: 30px;
-    font-weight: 800;
+    font-size: 2rem;
+    font-weight: 900;
     font-style: italic;
-    color: #ffd100;
     margin-left: 2%;
     margin-right: 5%;
 }
 
+.container-fluid .central-logo{
+    font-family: 'Roboto', sans-serif;
+}
+
 .small-logo{
-    font-size: 30px;
-    font-weight: 800;
+    font-size: 2rem;
+    font-weight: 900;
     font-style: italic;
     color: #ffd100;
     margin-left: 5%;
@@ -27,17 +34,18 @@ body {
 
 .small-logo i{
     color: #d6d6d6;
+    margin: auto;
 }
 
 .central-logo{
     text-align: center;
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: 600;
     color: #d6d6d6;
 }
 
 .central-logo span{
-    font-size: 50px;
+    font-size: 3.5rem;
     font-weight: 800;
     font-style: italic;
     color: #ffd100;
@@ -45,17 +53,51 @@ body {
 
 .central-logo-icon{
     text-align: center;
-    font-size: 71px;
+    font-size: 4.5rem;
     font-weight: 600;
     color: #d6d6d6;
 }
 
+
+/********************************* Section *********************************/
+
+#carouselCenter {
+  width: fit-content;
+  height: min-content;
+  margin: auto;
+}
+
+.cards{
+ font-family: 'Roboto', sans-serif;
+ color: #202020;
+ margin-top: 1rem;
+ margin-bottom: 1rem;
+}
+.cards i{
+    font-size: 3rem;
+}
+.cards .covid-measures{
+    text-align: center;
+}
+/********************************* Footer *********************************/
+
 #footer-details {
+    font-family: 'Roboto', sans-serif;
     background-color: #202020;
-    padding: 20px;
-    font-size: 40px;
+    padding: 1.25rem;
+    font-size: 2.5rem;
     font-weight: 600;
     text-align: right;
+}
+
+#footer-details .about p{
+    font-size: 1rem;
+    text-align: center;
+    margin: auto;
+}
+
+#footer-details .social{
+    vertical-align: middle;
 }
 
 #footer-details .list-inline-item a{
@@ -63,17 +105,12 @@ body {
 }
 
 #footer-details a:link,
-#footer-details a:visited{
+#footer-details a:visited,
+#footer-details a:active{
     color: #d6d6d6;
-    
 }
 
-/* mouse over link */
 #footer-details a:hover {
     color: #ffee32;
 }
 
-/* selected link */
-#footer-details a:active {
-    color: blue;
-}
